hphp/test/zend/good/ext/posix/tests/posix_ttyname.php.skipif
<?php 
	if (!extension_loaded('posix')) { 
        die('SKIP - POSIX extension not available');
    }
?>