hphp/test/zend/bad/ext/posix/tests/posix_ttyname_error_wrongparams.php.skipif
<?php 
	if (!extension_loaded('posix')) { 
        die('SKIP - POSIX extension not available');
    }
	if (!extension_loaded('gd')) { 
        die('SKIP - GD extension not available');
    }
    if (!function_exists('imagecreate')) {
        die('SKIP - Function imagecreate() not available');
    }
?>